2007-11-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libmisc/cpuuse/cpuuse.c: Fix date formatting.

2007-09-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1261/cpukit
	* posix/src/semaphorecreatesupp.c: Initialize all fields during
	semaphore creation.

2007-09-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1260/cpukit
	* posix/src/pthread.c: Get initial signals blocked from creating thread
	not from ourselves.

2007-09-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1259/rtems
	* rtems/src/taskcreate.c: Initialize is_global in all cases since
	memory is not guaranteed to be zero.

2007-09-12  Sergei Organov  <osv@javad.com>

	PR 1258/rtems
	* score/src/heapallocatealigned.c (block_allocate): New routine.
	* score/src/heapallocatealigned.c (_Heap_Allocate_aligned):
	Use block_allocate() instead of _Heap_Block_allocate(). Replace
	_Heap_Head(the_heap)->next with equivalent _Heap_First(the_heap).
	* score/src/heap.c (_Heap_Allocate): fix comments according
	to changed block split strategy in _Heap_Allocate_aligned().

2007-08-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* ChangeLog, sapi/src/io.c: Revert change accidentally committed to
	io.c.

2007-08-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1256/networking
	* ftpd/ftpd.c: Fix unaligned access.

2007-07-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1248/networking
	* libnetworking/rtems/rtems_glue.c: Luke Stras <luke@spacequest.com>
	reported that when no interfaces are successfully attached, the
	default route is broken and may result in a jump to an illegal
	address.

2007-07-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* include/rtems/bspIo.h, include/rtems/pci.h:
	Add extern "C" guards. Reported by
	Robert S. Grimes <rsg@alum.mit.edu>.

2007-05-29	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/include/rtems/score/copyrt.h: Update copyright notice.

2007-05-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1243
	* pppd/auth.c (set_allowed_addrs): Remove bogus dereference. 
